# tg_presentation_bot

./: .gitignore  Dockerfile  docker-compose.yml  pyproject.toml
app/: bot.py  frontend.py
templates/: index.html  questions.html
